<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Message TextView -->
    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/confirm_logout"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Yes Button -->
        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/my_primary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/yes"
            android:textColor="@android:color/white" />

        <!-- No Button -->
        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/my_primary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/no"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>