<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5D5D5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".createAccount">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_CreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/newAcc"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/picture"
                app:srcCompat="@drawable/baseline_person_24" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/username"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/my_primary"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/my_secondary"
                    android:textColorLink="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/my_primary"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/my_secondary"
                    android:textColorLink="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password_repeat"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/my_primary"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/my_secondary"
                    android:textColorLink="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/email"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/my_primary"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/my_secondary"
                    android:textColorLink="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="5" />

            <Button
                android:id="@+id/btn_createAccount"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="5" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/cancel" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>