<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".Dashboard">

        <LinearLayout
            android:id="@+id/nav_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/flag"
                app:srcCompat="@drawable/brazil" />

            <Spinner
                android:id="@+id/dropdown_currency"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/my_tertiary"
                app:drawableStartCompat="@drawable/baseline_person_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_wrapper"
            app:layout_constraintVertical_bias="0.0">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_amount"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/amount_to_convert"
                        android:lines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/my_primary"
                        android:textColorHighlight="@color/black"
                        android:textColorHint="@color/my_secondary"
                        android:textColorLink="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/convert_to"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/dropdown2"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="end"
                        android:layout_weight="2"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/converted_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E3E3E3"
                    android:backgroundTint="#CCCCCC"
                    android:orientation="horizontal">

                    <!-- Dropdown Spinner -->
                    <TextView
                        android:id="@+id/textView_current_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_conversion_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:textSize="16sp" />

                    <!-- TextView for Conversion Result -->
                    <TextView
                        android:id="@+id/txt_equal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:text="@string/equals" />

                    <TextView
                        android:id="@+id/textView_conversion_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_target_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:gravity="end" />


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange_rate"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_rates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/list"
                        android:nestedScrollingEnabled="true"
                        tools:itemCount="0" />
                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <Button
                    android:id="@+id/btn_add_currency"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/add_currency"
                    app:icon="@android:drawable/ic_input_add" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <Button
                    android:id="@+id/btn_save_pdf"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/save_pdf"
                    app:icon="@android:drawable/ic_input_add" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/api"
                app:srcCompat="@drawable/aapi" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/api" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>